--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 						<div class="inner">
 							<div class="logo"><span class="icon fa-gem"></span></div>
 							<h2>Eqab Al-Droubi</h2>
-							<p>I am A Data Analyst, Working with Excel, Microsoft SQL Server, Python, Tableau & Power BI.  Clean and Organize data, making it more readable and usable. Analyze data, extract insights and make visuals. <a href="https://www.linkedin.com/in/eqab-aldroubi-234951202/">Linkedin Page: eq111</a></p>
+							<p>As a data analyst, I am passionate about transforming raw data into actionable insights that drive informed decision-making. With a strong background in statistical analysis, data manipulation, and data visualization, I bring a wealth of experience to every project I undertake. <a href="https://www.linkedin.com/in/eqab-aldroubi-234951202/">Linkedin Page: eq111</a></p>
 						</div>
 					</section>
 
