--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 								<li class="icon solid fa-envelope"><a href="mailto:kra199re@gmail.com">kra199re@gmail.com</a></li>
 								
 
-								<li class="icon brands fa-instagram"><a href="instagram.com/oq_57">oq_57</a></li>
+								<li class="icon brands fa-instagram"><a href="https://www.instagram.com/oq_57">oq_57</a></li>
 							</ul>
 							
 						</div>
