--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 									Amman, Jordan<br />
 									
 								</li>
-								<li class="icon solid fa-phone">(+962) 777-128740</li>
+								<li class="icon solid fa-phone">(+962) 796886530</li>
 								<li class="icon solid fa-envelope"><a href="mailto:kra199re@gmail.com">kra199re@gmail.com</a></li>
 								
 
